--- a/src/video.html
+++ b/src/video.html
@@ -30,6 +30,25 @@
                 document.title=location.host + " - mumu"
             }
         </script>
+        <style>
+            .scrollbar::-webkit-scrollbar{
+                width:3px;
+            }
+            .scrollbar::-webkit-scrollbar-track{
+                background-color:#e7e7e7;
+            }
+            .scrollbar::-webkit-scrollbar-thumb{
+                background-color:#9f9f9f;
+                cursor: pointer;
+            }
+            .scrollbar::-webkit-scrollbar-thumb:hover {
+                background-color:#a3a3a3;
+            }
+            .scrollbar::-webkit-scrollbar-thumb:active {
+                background-color:#d4d4d4;
+            }
+
+        </style>
     </head>
     <body style="width: 100%;height: 100%;margin:0;padding:0;background-color: #000000;" >
         <div id="index" style="max-width:850px;height:100%;margin: auto;position:relative;background-color: #ffffff;" >
@@ -129,8 +148,8 @@
                     整句
                 </span>
             </div>
-            <div id="historywordspad" style="font-size:0;word-break: break-all;white-space: normal;margin-top: 20px;height: 100px;overflow: hidden;">
-                <span id="historyword_template" style="font-size:14px;display:none;margin-right:10px;cursor: pointer;margin-bottom:5px;color:#9f9f9f;">
+            <div id="historywordspad" class="scrollbar" style="font-size:0;word-break: break-all;white-space: normal;margin-top: 20px;height: 100px;overflow: auto;">
+                <span id="historyword_template" style="font-size:16px;display:none;margin-right:10px;cursor: pointer;margin-bottom:5px;color:#9f9f9f;">
                 </span>
             </div>
             <!-- 循环字幕功能块 -->
