--- a/src/video.html
+++ b/src/video.html
@@ -56,7 +56,7 @@
                 <img draggable="false"  src="./img/loading.gif" style="height:100%;width:100%;vertical-align: top;"/>
             </div>
             <!-- 视频块 -->
-             <video controls x5-playsinline="" playsinline="" controls360=no webkit-playsinline="" width="100%" id="video" poster="" preload="preload" autoplay
+             <video controls x5-playsinline="" playsinline="" controls360=no webkit-playsinline="" width="100%" id="video" poster="" preload="preload"
                 style="background: #000000;display: block;position: relative;display:none;">
             </video>
 
