--- a/src/video.html
+++ b/src/video.html
@@ -56,7 +56,7 @@
                 <img draggable="false"  src="./img/loading.gif" style="height:100%;width:100%;vertical-align: top;"/>
             </div>
             <!-- 视频块 -->
-             <video controls x5-playsinline="" playsinline="" controls360=no webkit-playsinline="" width="100%" id="video" poster="" preload="preload"
+             <video controls x5-playsinline playsinline controls360=no webkit-playsinline width="100%" id="video" poster autoplay preload loop muted
                 style="background: #000000;display: block;position: relative;display:none;">
             </video>
 
@@ -64,7 +64,7 @@
 
             <div id="hints" style="font-size:0;width:100%;background-color: #ffffff;text-align: center;display:none;border-top: 1px solid rgba(255, 255, 255, 0.048);">
                 <div style="font-size:20px;font-weight: 900;margin-top:54px;color:#00aeff;">'点击字幕' 或 '拖动滑块'</div>
-                <div style="font-size:20px;font-weight: 900;margin-top:10px;color:#00aeff;">即可查词和词组</div>
+                <div style="font-size:20px;font-weight: 900;margin-top:10px;color:#00aeff;">查词和词组</div>
                 <div id="hintssec" style="font-size:18px;font-weight: 900;margin-top:10px;color:#00aeff;">3</div>
             </div>
 
@@ -179,9 +179,9 @@
             </div>
            
             <div id="pcrecommand" class="unselectable" style="color: #acacac;position: absolute;bottom:0;right:0;font-size:14px;display:none;"></div>
-            <div style="font-size:14px;width:100%;height:25px;line-height:25px;position: absolute;right:0;bottom:0;cursor: pointer;
+            <div style="font-size:14px;width:100%;height:30px;line-height:30px;position: absolute;right:0;bottom:0;cursor: pointer;
                     border-style:solid;border-width:1px 0 0 0;border-color: #d8d8d8;color: #d8d8d8;text-align: center;"
-                onclick="location.href='./index.html'">
+                onclick="location.replace('./index.html')">
                 返回主页
             </div>
         </div>
