--- a/src/video.html
+++ b/src/video.html
@@ -63,7 +63,7 @@
             
 
             <div id="hints" style="font-size:0;width:100%;background-color: #ffffff;text-align: center;display:none;border-top: 1px solid rgba(255, 255, 255, 0.048);">
-                <div style="font-size:20px;font-weight: 900;margin-top:54px;color:#00aeff;">'点击字幕'</div>
+                <div style="font-size:20px;font-weight: 900;margin-top:54px;color:#00aeff;">点击字幕</div>
                 <div style="font-size:20px;font-weight: 900;margin-top:10px;color:#00aeff;">查词和词组</div>
                 <div id="hintssec" style="font-size:18px;font-weight: 900;margin-top:10px;color:#00aeff;">3</div>
             </div>
