--- a/src/video.html
+++ b/src/video.html
@@ -13,7 +13,7 @@
         <title>mumu</title>
         <meta name="x5-fullscreen" content="true">
         <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
-        <link rel="stylesheet" type="text/css" href="./page.css" />
+        <link rel="stylesheet" type="text/css" href="./css/page.css" />
         <link rel="apple-touch-startup-image" href="./favicon.ico" />
         <link rel="apple-touch-icon-precomposed" href="./favicon.ico" />
         <link rel="apple-touch-icon" href="./favicon.ico" />
@@ -23,8 +23,8 @@
         <script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"></script>
         <script src="https://gosspublic.alicdn.com/aliyun-oss-sdk.min.js"></script> 
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script> 
-        <script src="./log.js" type="application/javascript"></script>    
-        <script src="./page-pre.js" type="application/javascript"></script>
+        <script src="./js/log.js" type="application/javascript"></script>    
+        <script src="./js/page-pre.js" type="application/javascript"></script>
         <script>
             if(!isPc()){
                 document.title=location.host + " - mumu"
@@ -191,5 +191,5 @@
         
     </body>
     <script src="./video-post.min.js" type="application/javascript"></script>
-    <script src="./page-post.js" type="application/javascript"></script>
+    <script src="./js/page-post.js" type="application/javascript"></script>
 </html>
