--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <title>幕幕 - mumu</title>
         <meta name="x5-fullscreen" content="true">
         <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
-        <link rel="stylesheet" type="text/css" href="./page.css" />
+        <link rel="stylesheet" type="text/css" href="./css/page.css" />
         <link rel="apple-touch-startup-image" href="./favicon.ico" />
         <link rel="apple-touch-icon-precomposed" href="./favicon.ico" />
         <link rel="apple-touch-icon" href="./favicon.ico" />
@@ -21,8 +21,8 @@
         <script src="https://s2.pstatp.com/cdn/expire-1-M/jquery/3.5.1/jquery.min.js" type="application/javascript"></script>
         <script src="https://s0.pstatp.com/cdn/expire-1-M/jquery-cookie/1.4.1/jquery.cookie.min.js" type="application/javascript"></script>
         <script src="https://s2.pstatp.com/cdn/expire-1-M/vConsole/3.4.0/vconsole.min.js" type="application/javascript"></script>
-        <script src="./log.js" type="application/javascript"></script>
-        <script src="./page-pre.js" type="application/javascript"></script>
+        <script src="./js/log.js" type="application/javascript"></script>
+        <script src="./js/page-pre.js" type="application/javascript"></script>
         <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js" type="application/javascript"></script>
         <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/imageviewer/1.1.0/viewer.js" type="application/javascript"></script>
         <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/imageviewer/1.1.0/viewer.css" type="text/css" rel="stylesheet" />
@@ -135,7 +135,7 @@
         </div>
     </body>
     
-    <script src="./page-post.js" type="application/javascript"></script>
+    <script src="./js/page-post.js" type="application/javascript"></script>
     <script>
         // if(navigator.geolocation) {
         //     navigator.geolocation.getCurrentPosition(function(position){
