--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>幕幕 - mumu</title>
+        <title>幕幕</title>
         <meta name="x5-fullscreen" content="true">
         <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
         <link rel="stylesheet" type="text/css" href="./css/page.css" />
@@ -28,9 +28,6 @@
         <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/imageviewer/1.1.0/viewer.css" type="text/css" rel="stylesheet" />
         <script>
             log.debugon=0
-            if(!isPc()){
-                document.title=location.host + " - 幕幕"
-            }
         </script>
         <style>
             /* @media screen and (min-width: 850px) {
