--- a/src/video.html
+++ b/src/video.html
@@ -99,27 +99,15 @@
                 style="line-height: 30px;width: 100%;text-align: center;min-height: 64px;background-color: #ffffff;margin-top:5px;font-size: 18px;" >
             </div>
             
-            <!-- 电影开始暂停功能块 -->
-            <div style="box-sizing: border-box;text-align: center;margin-top: 5px;">
-                <button id="startFn"  class="startFn unselectable"
-                    style="cursor:pointer;text-align: center;line-height: 40px;padding: 0px;background: white;border: 1px solid #827e7e;
-                        font-size: 14px;padding: 0px;width: 100%;height: 40px;border-style:solid none solid none;">
-                    <svg style="width: 15px;height: 15px;vertical-align: text-bottom;" t="1615253689101" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2165" width="200" height="200"><path d="M803.84 492.032 213.056 135.04C195.392 124.288 174.208 124.288 156.352 134.976 138.624 145.728 128 164.928 128 186.368l0 714.176c0 21.44 10.624 40.704 28.352 51.392C165.248 957.312 174.976 960 184.704 960c9.728 0 19.52-2.688 28.352-8.064l590.72-356.992c17.728-10.752 28.288-30.016 28.288-51.456C832.128 521.984 821.568 502.72 803.84 492.032zM189.568 891.712 187.136 193.792l578.624 349.696L189.568 891.712z" p-id="2166"></path></svg>
-                </button>
-                <button id="stopFn" class="stopFn unselectable" 
-                    style="cursor:pointer;text-align: center;line-height: 40px;padding: 0px;display: none;background: white;border: 1px solid #827e7e;
-                        font-size: 15px;padding: 0px;width: 100%;height: 40px;border-style:solid none solid none;">
-                    ||
-                </button>
-            </div>
+           
             <div style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;">    
-                <span id="prevline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:0 0 1px 0;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style:solid;">
+                <span id="prevline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style:solid;">
                     上一句
                 </span>
-                <span id="currline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:0 1px 1px 1px;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style: solid;">
+                <span id="currline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 1px 1px 1px;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style: solid;">
                     本句
                 </span>
-                <span id="nextline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:0 0 1px 0;border-color:#827e7e;font-size: 12px;padding: 0 5px;border-style:solid;">
+                <span id="nextline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color:#827e7e;font-size: 12px;padding: 0 5px;border-style:solid;">
                     下一句
                 </span>
             </div>
@@ -133,26 +121,36 @@
                 <img id="finger" src="./img/finger.svg" style="position:absolute;left:50%;transform: translateX(-50%);top:45%;width:40px;"/>
             </div>
             <!-- 字幕控制显示组件块 -->
-            <div style="justify-content: center;display: flex;margin: 10px 0px 0px 0px;height: 20px;">
+            <div style="justify-content: space-around;display: flex;margin: 10px 0px 0px 0px;height: 40px;line-height:40px;align-items: center;">
                 <span id="replay" class="unselectable" 
-                    style="font-size: 14px;cursor:pointer;padding: 0px;width: 50px;height: 20px;color: #bfbbbb;margin-right: 35px;text-align: center;line-height: 20px;
+                    style="font-size: 14px;cursor:pointer;padding: 0px;width: 50px;height: 28px;color: #bfbbbb;text-align: center;line-height: 28px;
                         border: 1px solid #bfbbbb;background: transparent;border-radius: 3px;">
                     重播
                 </span>
                 <span id="searchbtn" class="unselectable" 
-                    style="line-height: 24px;cursor:pointer;margin-right: 35px;padding: 0px;width: 60px;height: 20px;color: #bfbbbb;text-align: center;line-height: 20px;
+                    style="font-size: 14px;cursor:pointer;padding: 0px;width: 50px;height: 28px;color: #bfbbbb;text-align: center;line-height: 28px;
                         border: 1px solid #bfbbbb;background: transparent;border-radius: 3px;">
-                    <img src="./img/search.svg" style="width:15px;height: 15px;vertical-align: middle;"/>
+                    查词
+                </span>
+                <span id="startFn"  class="startFn unselectable"
+                    style="cursor:pointer;text-align: center;line-height: 28px;padding: 0px;background: white;border: 1px solid #bfbbbb;
+                        font-size: 14px;padding: 0px;width: 60px;height: 28px;border-radius: 3px;">
+                    <svg style="width: 15px;height: 15px;vertical-align: text-bottom;" t="1615253689101" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2165" width="200" height="200" fill="#bfbbbb"><path d="M803.84 492.032 213.056 135.04C195.392 124.288 174.208 124.288 156.352 134.976 138.624 145.728 128 164.928 128 186.368l0 714.176c0 21.44 10.624 40.704 28.352 51.392C165.248 957.312 174.976 960 184.704 960c9.728 0 19.52-2.688 28.352-8.064l590.72-356.992c17.728-10.752 28.288-30.016 28.288-51.456C832.128 521.984 821.568 502.72 803.84 492.032zM189.568 891.712 187.136 193.792l578.624 349.696L189.568 891.712z" p-id="2166"></path></svg>
+                </span>
+                <span id="stopFn" class="stopFn unselectable" 
+                    style="cursor:pointer;text-align: center;line-height: 28px;padding: 0px;display: none;background: white;border: 1px solid #bfbbbb;color:#bfbbbb;
+                        font-size: 15px;padding: 0px;width: 60px;height: 28px;border-radius: 3px;">
+                    ||
                 </span>
                 <span id="wholebtn" class="unselectable" 
-                    style="font-size: 14px;cursor:pointer;margin-right: 35px;padding: 0px;width: 50px;height: 20px;color: #bfbbbb;text-align: center;line-height: 20px;
+                    style="font-size: 14px;cursor:pointer;padding: 0px;width: 50px;height: 28px;color: #bfbbbb;text-align: center;line-height: 28px;
                         border: 1px solid #bfbbbb;background: transparent;border-radius: 3px;">
                     整句
                 </span>
                 <span id="hideBtn" class="unselectable"
-                    style="font-size: 14px;cursor:pointer;padding: 0px;width: 55px;height: 20px;color: #bfbbbb;text-align: center;line-height: 20px;
+                    style="font-size: 14px;cursor:pointer;padding: 0px;width: 50px;height: 28px;color: #bfbbbb;text-align: center;line-height: 28px;
                         border: 1px solid #bfbbbb;background: transparent;border-radius: 3px;">
-                    HIDE
+                    隐藏
                 </span>
             </div>
             <div  id="historywordspad" class="scrollbar" style="font-size:0;word-break: break-all;white-space: normal;margin-top: 20px;height: 100px;overflow: auto;position: relative;">
