--- a/src/history.html
+++ b/src/history.html
@@ -30,14 +30,8 @@
     </head>
     <body style="width: 100%;height: 100%;margin:0;padding:0;background-color: #ffffff;" >
         <div style="text-align: center;box-sizing: border-box;border: 1px solid #ffffff14;">
-            <div style="text-align: center;border:1px solid #000000;padding:3px 10px;width:200px;border-radius: 3px;margin:auto;margin-top:200px;cursor: pointer;"
-                onclick="
-                    localStorage.clear()
-                    clearAllCookie()
-                    alert('重置完成')
-                    location.replace('./index.html')
-                ">
-                重 置
+            <div style="text-align: center;padding:3px 10px;width:200px;margin:auto;margin-top:200px;">
+                开发中
             </div>
         </div>
         
@@ -53,12 +47,12 @@
                 资源
             </span>
             <span class="unselectable" 
-                style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#000000;font-weight:900;"
                 onclick="location.replace('history.html')">
                 历史
             </span>
             <span class="unselectable" 
-                style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#000000;font-weight:900;"
+                style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
                 onclick="location.replace('my.html')">
                 我的
             </span>
