--- a/src/list.html
+++ b/src/list.html
@@ -128,17 +128,22 @@
             </div> -->
             <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #cdcdcd;background: #ffffff;">
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:33%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
                     onclick="location.replace('index.html')">
-                    主页
+                    探索
                 </span>
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:33%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#000000;font-weight:900;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#000000;font-weight:900;"
                     onclick="location.replace('list.html')">
-                    列表
+                    资源
                 </span>
                 <span class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:34%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
+                    onclick="location.replace('history.html')">
+                    历史
+                </span>
+                <span class="unselectable" 
+                    style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
                     onclick="location.replace('my.html')">
                     我的
                 </span>
@@ -195,7 +200,7 @@
             $.ajax({
                 url: '/mumu/videos?',
                 type: 'get',
-                data: 'kw='+''+'&start='+1+'&pageSize='+30,
+                data: 'longvideo=1&kw='+''+'&start='+1+'&pageSize='+30,
                 async: true,
                 success: function(res) {
                     $(res.data.videos).each((inx,item)=>{
