--- a/src/index.html
+++ b/src/index.html
@@ -192,11 +192,11 @@
             <div style="font-size:0;height:40px;position: absolute;bottom:51px;width:100%;border-top: 1px solid #bfbbbb;background: #ffffff;">
                 <span id="goPrevVideo" class="unselectable" 
                     style="font-size:16px;display: inline-block;width:50%;height:40px;line-height:40px;cursor: pointer;text-align: center;color:#bfbbbb;">
-                    上一部
+                    上一篇
                 </span>
                 <span id="goNextVideo" class="unselectable" 
                     style="font-size:16px;display: inline-block;width:50%;height:40px;line-height:40px;cursor: pointer;text-align: center;color:#bfbbbb;">
-                    下一部
+                    下一篇
                 </span>
             </div>
             <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #cdcdcd;background: #ffffff;">
