--- a/src/list.html
+++ b/src/list.html
@@ -140,7 +140,7 @@
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
                     onclick="location.replace('history.html')">
-                    历史
+                    看过
                 </span>
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
@@ -281,7 +281,7 @@
         
         wx.ready(function () {   //需在用户可能点击分享按钮前就先调用
             wx.updateAppMessageShareData({ 
-                title: '幕幕 - mumu', // 分享标题
+                title: '幕幕 - 英语练习', // 分享标题
                 desc: 'renx.cc', // 分享描述
                 link: location.href, // 分享链接，该链接域名或路径必须与当前页面对应的公众号JS安全域名一致
                 imgUrl: location.origin+'/mumu/favicon.ico', // 分享图标
@@ -291,7 +291,7 @@
             })
 
             wx.updateTimelineShareData({ 
-                title: '幕幕 - mumu', // 分享标题
+                title: '幕幕 - 英语练习', // 分享标题
                 link: location.href, // 分享链接，该链接域名或路径必须与当前页面对应的公众号JS安全域名一致
                 imgUrl: location.origin+'/mumu/favicon.ico', // 分享图标
                 success: function () {
