--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             }
             @media screen and (max-width: 850px) {
                 #video,#summtrans,#wordsframe,#videoshasow {
-                    height:250px;
+                    height:220px;
                 }
             }
 
@@ -98,7 +98,7 @@
                     </div>
                     <div id="favor" style="position:absolute;bottom:0;left:0;right:0;width:100%;font-size:14px;text-align: center;padding: 5px 0;
                             border-top: 1px solid #595959;cursor: pointer;">
-                        收藏
+                        收 藏
                     </div>
                 </div>
             </div> 
@@ -174,7 +174,7 @@
                     隐藏
                 </span>
             </div>
-            <div  id="historywordspad" class="scrollbar" style="font-size:0;word-break: break-all;white-space: normal;margin-top: 20px;height: 150px;overflow: auto;position: relative;">
+            <div  id="historywordspad" class="scrollbar" style="padding: 3px 5px;font-size:0;word-break: break-all;white-space: normal;margin-top: 15px;height: 150px;overflow: auto;position: relative;">
                 <span id="historyword_template" class="unselectable" style="font-size:16px;display:none;margin-right:15px;cursor: pointer;margin-bottom:5px;color:#9f9f9f;">
                 </span>
             </div>
@@ -194,17 +194,22 @@
                 <div style="width: 100%;position: absolute;top: 285px;padding: 10px 0px;box-sizing: border-box;margin: auto;text-align: center;
                         background: #ffffff;letter-spacing: 0.5px;font-size:20px;"></div>
             </div>
-            <div style="font-size:0;height:40px;position: absolute;bottom:51px;width:100%;border-top: 1px solid #bfbbbb;background: #ffffff;">
+            <div class="unselectable" style="font-size:0;width:100%;height:20px;line-height:20px;position: absolute;right:0;bottom:87px;cursor: pointer;
+                    background-color: #ffffff;box-sizing: border-box;padding: 0 5px;
+                    overflow:hidden;text-overflow: ellipsis;white-space: nowrap;">
+                <span id="titleinback" style="font-size:12px;color:#bfbbbb;"></span>
+            </div>
+            <div style="font-size:0;height:35px;position: absolute;bottom:51px;width:100%;border-top: 1px solid #dedede;background: #ffffff;">
                 <span id="goPrevVideo" class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:50%;height:40px;line-height:40px;cursor: pointer;text-align: center;color:#bfbbbb;">
+                    style="font-size:16px;display: inline-block;width:50%;height:35px;line-height:35px;cursor: pointer;text-align: center;color:#bfbbbb;">
                     上一篇
                 </span>
                 <span id="goNextVideo" class="unselectable" 
-                    style="font-size:16px;display: inline-block;width:50%;height:40px;line-height:40px;cursor: pointer;text-align: center;color:#bfbbbb;">
+                    style="font-size:16px;display: inline-block;width:50%;height:35px;line-height:35px;cursor: pointer;text-align: center;color:#bfbbbb;">
                     下一篇
                 </span>
             </div>
-            <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #cdcdcd;background: #ffffff;">
+            <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #dedede;background: #ffffff;">
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#000000;font-weight:900;"
                     onclick="$('#video')[0].pause();location.replace('index.html');">
