--- a/src/video.html
+++ b/src/video.html
@@ -36,7 +36,7 @@
             }
             @media screen and (max-width: 850px) {
                 #video,#summtrans,#wordsframe {
-                    height:250px;
+                    height:220px;
                 }
             }
 
@@ -95,7 +95,7 @@
                     </div>
                     <div id="favor" style="position:absolute;bottom:0;left:0;right:0;width:100%;font-size:14px;text-align: center;padding: 5px 0;
                             border-top: 1px solid #595959;cursor: pointer;">
-                        收藏
+                        收 藏
                     </div>
                 </div>
             </div> 
@@ -171,7 +171,7 @@
                     隐藏
                 </span>
             </div>
-            <div  id="historywordspad" class="scrollbar" style="font-size:0;word-break: break-all;white-space: normal;margin-top: 20px;height: 150px;overflow: auto;position: relative;">
+            <div  id="historywordspad" class="scrollbar" style="padding: 3px 5px;font-size:0;word-break: break-all;white-space: normal;margin-top: 15px;height: 150px;overflow: auto;position: relative;">
                 <span id="historyword_template" class="unselectable" style="font-size:16px;display:none;margin-right:15px;cursor: pointer;margin-bottom:5px;color:#9f9f9f;">
                 </span>
             </div>
@@ -192,13 +192,13 @@
                         background: #ffffff;letter-spacing: 0.5px;font-size:20px;"></div>
             </div>
             <div class="unselectable" style="font-size:14px;width:100%;height:35px;line-height:35px;position: absolute;right:0;bottom:51px;cursor: pointer;
-                    border-style:solid;border-width:1px 0 0 0;border-color: #cdcdcd;color: #d8d8d8;background-color: #ffffff;box-sizing: border-box;padding-right: 5px;
+                    border-style:solid;border-width:1px 0 0 0;border-color: #dedede;color: #d8d8d8;background-color: #ffffff;box-sizing: border-box;padding:0 5px;
                     overflow:hidden;text-overflow: ellipsis;white-space: nowrap;"
                 onclick="$('#video')[0].pause();history.back()">
-                <span style="font-size:14px;margin-left:10px;color:#919191;"><</span>
-                <span id="titleinback" style="font-size:14px;margin-left:10px;color:#919191;"></span>
+                <span style="font-size:14px;color:#919191;"><</span>
+                <span id="titleinback" style="font-size:14px;margin-left:5px;color:#919191;"></span>
             </div>
-            <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #cdcdcd;background: #ffffff;">
+            <div style="font-size:0;height:50px;position: absolute;bottom:0;width:100%;border-top: 1px solid #dedede;background: #ffffff;">
                 <span class="unselectable" 
                     style="font-size:16px;display: inline-block;width:25%;height:50px;line-height:50px;cursor: pointer;text-align: center;color:#919191;"
                     onclick="$('#video')[0].pause();location.replace('index.html');">
