--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 
         </style>
     </head>
-    <body style="width: 100%;height: 100%;margin:0;padding:0;background-color: #000000;" >
+    <body class="unselectable" style="width: 100%;height: 100%;margin:0;padding:0;background-color: #000000;" >
         <div id="index" style="max-width:850px;height:100%;margin: auto;position:relative;background-color: #ffffff;font-size:0;" >
             <div id="loading" style="width:100%;height:5px;position: absolute;top:0;z-index: 999999;overflow: hidden;display:none;">
                 <img draggable="false"  src="./img/loading.gif" style="height:100%;width:100%;vertical-align: top;"/>
@@ -108,8 +108,8 @@
                     top: 0;color: #ffffff;padding:5px 10px;display:none;">
                 <input id="word-in" autocomplete="off" 
                     style="font-size: 16px;font-weight: 900;display: block;width:100%;box-sizing: border-box;border: none;
-                        background-color: #eaeaea;border-radius: 1px;line-height: 20px;height: 20px;"/>
-                <div id="wordss" style="font-size:14px;position:absolute;top:27px;bottom:0;left:0;right:0;padding:3px 10px 5px 10px;">
+                        background-color: #eaeaea;border-radius: 1px;line-height: 25px;height: 25px;"/>
+                <div id="wordss" style="font-size:14px;position:absolute;top:30px;bottom:0;left:0;right:0;padding:3px 10px 5px 10px;">
                     <div id="words"  class="scrollbar1" style="width:100%;height:100%;overflow: auto;">
                         <div id="wordtempl" class="unselectable" style="overflow:hidden;text-overflow: ellipsis;white-space: nowrap;width:100%;display:none;cursor: pointer;" >
                         </div>
