--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
                     ||
                 </button>
             </div>
-            <div style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;">    
+            <div id="prevnextpad" style="box-sizing: border-box;width: 100%;display: flex;justify-content: space-between;margin: 0px auto;">    
                 <span id="prevline" class="unselectable" style="text-align: center;line-height: 40px;cursor:pointer;height: 40px;box-sizing: border-box;width: 33.3333333333%;background: white;border-width:1px 0 1px 0;border-color: #827e7e;font-size: 12px;padding: 0 5px;border-style:solid;background-color: #ffffff;">
                     上一句
                 </span>
@@ -151,7 +151,7 @@
                     下一句
                 </span>
             </div>
-            <div id="gearframe1" style="position: relative;background-color: #ffffff;">
+            <div id="gearframe1" style="position: relative;background-color: #ffffff;margin-bottom:10px;">
                 <div id="gearframe" class="unselectable" style="position: relative;height:46px;overflow: hidden;border-width: 0 0 1px 0; border-color: #827e7e;border-style: solid;background-color: #ffffff;">
                     <div id="gear" class="unselectable" 
                         style="height:0;border-width:23px 0;border-style:dashed;border-color: #d8d8d8;width:5000px;
@@ -161,7 +161,7 @@
                 <img id="finger" src="./img/finger.svg" style="position:absolute;left:50%;transform: translateX(-50%);top:45%;width:40px;"/>
             </div>
             <!-- 字幕控制显示组件块 -->
-            <div id="controlpad" style="justify-content: space-around;display: flex;margin: 10px 0px 0px 0px;height: 40px;line-height:40px;align-items: center;">
+            <div id="controlpad" style="justify-content: space-around;display: flex;height: 35px;align-items: center;">
                 <span id="replay" class="unselectable" 
                     style="font-size: 14px;cursor:pointer;padding: 0px;width: 13%;height: 33px;color: #bfbbbb;text-align: center;line-height: 33px;
                         border: 1px solid #bfbbbb;background-color: #ffffff;border-radius: 3px;">
