--- a/src/index.html
+++ b/src/index.html
@@ -268,9 +268,11 @@
                             style="width:100%;box-sizing: border-box;height:30px;display:inline-block;border: none;
                                 background-color: #eaeaea;padding:0 3px;" />
                     </div>
-                    <div id="chatmsgspad" class="scrollable" style="width:100%;overflow: auto;box-sizing: border-box;padding:0px 3px 3px 3px;position:absolute;bottom:0;top:30px;font-size:0;margin-top:5px;">
+                    <div id="chatmsgspad" class="scrollable" 
+                        style="width:100%;overflow: auto;box-sizing: border-box;padding:0px 3px 3px 3px;
+                            position:absolute;bottom:0;top:30px;font-size:0;margin-top:5px;">
                         <div id="chatmsgtemple" 
-                            style="font-size:0;width:100%;min-height:20px;max-height:40px;display:none;margin-bottom:5px;position: relative;">
+                            style="font-size:0;width:100%;height:40px;display:none;margin-bottom:5px;position: relative;">
                             <span class="name" 
                                 style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;width:55px;
                                     overflow: hidden;text-align: right;">
@@ -278,13 +280,13 @@
                             <span style="vertical-align: middle;height:20px;display:inline-block;font-size:13px;line-height:20px;">
                                 :
                             </span>
-                            <span class="msghold" 
-                                style="visibility: hidden;vertical-align: middle;display:inline-block;font-size:13px;line-height:20px;
-                                    min-height:20px;max-height:40px;overflow: hidden;">
-                            </span>
                             <span class="msg translatable" 
                                 style="top: 0;vertical-align: middle;display:inline-block;font-size:13px;line-height:20px;position: absolute;left:65px;
-                                    right:0px;min-height:20px;max-height:40px;overflow: hidden;">
+                                    right:0px;height:20px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">
+                            </span>
+                            <span class="looking" 
+                                style="top: 20px;vertical-align: middle;display:inline-block;font-size:12px;line-height:15px;position: absolute;left:65px;
+                                    right:0px;height:15px;overflow: hidden;color:#777777;text-overflow: ellipsis;white-space: nowrap;">
                             </span>
                         </div>
                     </div>
